3C Navbar and Header done

--- a/index.html
+++ b/index.html
@@ -11,12 +11,30 @@
 </head>
 <body class="fira-sans-regular">
     <!-- --------------------- -->
-    <Header>
-        <nav></nav>
-    </Header>
+    <nav>
+            <h2 class="nav-title">Bangladesh 2.0</h2>
+            <button class="primary-btn">Sign up</button>
+    </nav>
+    <!-- --------------------- -->
+    <header>
+        <div class="hero">
+            <div class="hero1">
+                <h6 class="hero-subtitle">
+                    Bangladesh 2.0
+                </h6>
+                <h1 class="hero-heading">Idea,
+                    <br>Innovation,
+                    <br>Vision & <br>Challenges in <br><span id="Extra-B">New Bangladesh.</span></h1>
+                <button class="primary-btn">Explore New Bangladesh</button>
+            </div>
+            <div class="hero2">
+                <img src="assets/hero.png" alt="">
+            </div>
+        </div>
+    </header>
     <!-- --------------------- -->
     <Main>
-        
+
     </Main>
     <!-- --------------------- -->
     <Footer>
