4C Done till vision

--- a/index.html
+++ b/index.html
@@ -34,7 +34,57 @@
     </header>
     <!-- --------------------- -->
     <Main>
-
+        <div class="pillers">
+            <h1 class="section-title">Pillers of "Bangladesh 2.0"</h1>
+            <div class="piller-cards-container">
+                <div class="piller-cards">
+                    <div class="piller-img"><img src="assets/card-icon.png" alt="EH HEH HEH"></div>
+                    <h5 class="body-title">Innovation</h5>
+                    <p class="body-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates, porro.</p>
+                </div>
+                <div class="piller-cards">
+                    <div class="piller-img"><img src="assets/card-icon.png" alt="EH HEH HEH"></div>
+                    <h5 class="body-title">Sustainability</h5>
+                    <p class="body-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates, porro.</p>
+                </div>
+                <div class="piller-cards">
+                    <div class="piller-img"><img src="assets/card-icon.png" alt="EH HEH HEH"></div>
+                    <h5 class="body-title">Education</h5>
+                    <p class="body-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates, porro.</p>
+                </div>
+                <div class="piller-cards">
+                    <div class="piller-img"><img src="assets/card-icon.png" alt="EH HEH HEH"></div>
+                    <h5 class="body-title">Empowerment</h5>
+                    <p class="body-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates, porro.</p>
+                </div>
+            </div>
+        </div>
+        <!-- Pillers End -->
+        <div class="vision">
+            <h1 class="section-title">The Vision of Future</h1>
+            <p class="body-text v-body" >Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital transformation, and robust infrastructure, the country is set to become a global model of development.</p>
+            <div class="vision-card-container">
+                <div class="vision-card" id="vision-1">
+                    <div class="vimg"><img src="assets/card-icon.png" alt=""></div>
+                    <div class="body-title">Digital Transformation</div>
+                    <div class="body-text">Creating a nationwide digital ecosystem to enhance connectivity and access to services for all citizens.</div>
+                    <div class="vbtn"><button class="primary-btn" id="vbtn1">Learn More</button></div>
+                </div>
+                <div class="vision-card" id="vision-2">
+                    <div class="vimg"><img src="assets/card-icon.png" alt=""></div>
+                    <div class="body-title">Green Energy</div>
+                    <div class="body-text">Investments in solar and wind energy to ensure a sustainable and eco-friendly future.</div>
+                    <div class="vbtn"><button class="primary-btn" id="vbtn2">Learn More</button></div>
+                </div>
+                <div class="vision-card" id="vision-3">
+                    <div class="vimg"><img src="assets/card-icon.png" alt=""></div>
+                    <div class="body-title">Modern Infrastructure</div>
+                    <div class="body-text">Building state-of-the-art infrastructure to support economic growth and global competitiveness.</div>
+                    <div class="vbtn"><button class="primary-btn" id="vbtn3">Learn More</button></div>
+                </div>
+            </div>
+        </div>
+        <!-- Vision End -->
     </Main>
     <!-- --------------------- -->
     <Footer>
