--- a/index.html
+++ b/index.html
@@ -66,25 +66,26 @@
             <div class="vision-card-container">
                 <div class="vision-card" id="vision-1">
                     <div class="vimg"><img src="assets/card-icon.png" alt=""></div>
-                    <div class="body-title">Digital Transformation</div>
-                    <div class="body-text">Creating a nationwide digital ecosystem to enhance connectivity and access to services for all citizens.</div>
+                    <div class="body-title"><h5>Digital Transformation</h5></div>
+                    <div class="body-text"><P>Creating a nationwide digital ecosystem to enhance connectivity and access to services for all citizens.</P></div>
                     <div class="vbtn"><button class="primary-btn" id="vbtn1">Learn More</button></div>
                 </div>
                 <div class="vision-card" id="vision-2">
                     <div class="vimg"><img src="assets/card-icon.png" alt=""></div>
-                    <div class="body-title">Green Energy</div>
-                    <div class="body-text">Investments in solar and wind energy to ensure a sustainable and eco-friendly future.</div>
+                    <div class="body-title"><h5>Green Energy</h5></div>
+                    <div class="body-text"><p></p>Investments in solar and wind energy to ensure a sustainable and eco-friendly future.</p></div>
                     <div class="vbtn"><button class="primary-btn" id="vbtn2">Learn More</button></div>
                 </div>
                 <div class="vision-card" id="vision-3">
                     <div class="vimg"><img src="assets/card-icon.png" alt=""></div>
-                    <div class="body-title">Modern Infrastructure</div>
-                    <div class="body-text">Building state-of-the-art infrastructure to support economic growth and global competitiveness.</div>
+                    <div class="body-title"><h5>Modern Infrastructure</h5></div>
+                    <div class="body-text"><p></p>Building state-of-the-art infrastructure to support economic growth and global competitiveness.</p></div>
                     <div class="vbtn"><button class="primary-btn" id="vbtn3">Learn More</button></div>
                 </div>
             </div>
         </div>
         <!-- Vision End -->
+         
     </Main>
     <!-- --------------------- -->
     <Footer>
