--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bangladesh 2.0</title>
+    <title>Bangladesh 2.0 nms</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
+    <link rel="shortcut icon" href="assets/Group-3.png" type="image/x-icon">
 </head>
 <body class="fira-sans-regular">
     <!-- --------------------- -->
@@ -85,7 +86,11 @@
             </div>
         </div>
         <!-- Vision End -->
-         
+        <div class="quote">
+            <p class="quote-body body-text"><cite>"Safety of environment needs a new life-style. That life-style would not be imposed, it will be a choice.Young people love that life style as a choice. Each young person will grow up as a three zero person -zero net carbon emissions, zero wealth concentration,through building social businesses only, and zero unemployment by turning themselves into entrepreneurs. Each person will grow up as a three zero person, and remain a three zero person all his/her life. That will create the new civilisation."</cite></p>
+            <h5 class="body-title">Dr. Muhammad Yunus</h5>
+            <p class="quote-desig">Chief Adviser of the People's Republic of Bangladesh</p>
+        </div>
     </Main>
     <!-- --------------------- -->
     <Footer>
