6C Done till opinion section

--- a/index.html
+++ b/index.html
@@ -91,6 +91,43 @@
             <h5 class="body-title">Dr. Muhammad Yunus</h5>
             <p class="quote-desig">Chief Adviser of the People's Republic of Bangladesh</p>
         </div>
+        <!-- Quote End -->
+        <div class="opinion">
+            <h1 class="section-title">Share Your Opinion</h1>
+            <div class="table-container">
+                <table  class="opinion-table">
+                    <thead>
+                        <tr>
+                            <th colspan="4">Questions</th>
+                            <th>Select Your Opinion</th></tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td colspan="4">Do you believe Bangladesh is on the right path toward becoming a developed nation?</td>
+                            <Td><select name="opinion" id="polls">
+                                <option value="Yes">Yes, I agree</option>
+                                <option value="not">No, I disagree</option>
+                                <option value="Maybe">Not Sure</option>
+                            </select></Td>
+                        </tr>
+                        <tr>
+                            <td colspan="4">Do you believe Bangladesh is on the right path toward becoming a educated nation?</td>
+                            <Td><select name="opinion" id="polls">
+                                <option value="Yes">Yes, I agree</option>
+                                <option value="not">No, I disagree</option>
+                                <option value="Maybe">Not Sure</option></Td>
+                        </tr>
+                        <tr>
+                            <td colspan="4">Do you believe Bangladesh is on the right path toward becoming a more happy nation?</td>
+                            <Td><select name="opinion" id="polls">
+                                <option value="Yes">Yes, I agree</option>
+                                <option value="not">No, I disagree</option>
+                                <option value="Maybe">Not Sure</option></Td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
     </Main>
     <!-- --------------------- -->
     <Footer>
