--- a/index.html
+++ b/index.html
@@ -179,11 +179,18 @@
         </section>
         <!-- Donation End -->
         <section class="newsletter">
-            <h1 class="section-title">Subscribe To Newsletter</h1>
-            <p class="body-text">Subscribe to bi-weekly newsletter, and stay up-to-date about the current affairs of Bangladesh.</p>
-            <input type="text" name="email" id="email" class="email"><button class="primary-btn" id="subscribe">Subscribe</button>
-            <p class="body-text">we promise not to spam you.:) </p>
+            <div class="newsletter-container">
+                <h1 class="section-title">Subscribe To Newsletter</h1>
+                <p class="body-text">Subscribe to bi-weekly newsletter, and stay up-to-date about the current affairs of Bangladesh.</p>
+                <div class="collect-email">
+                    <input type="text" name="email" id="email" class="email" placeholder="Enter Your Email Here">
+                        <button class="Newsletter_Btn">Subscribe</button>
+                    </input>
+                </div>
+                <p class="body-text">we promise not to spam you.:) </p>
+            </div>
         </section>
+        <!-- Newsletter End -->
     </Main>
     <!-- --------------------- -->
     <Footer>
