--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
     </Main>
     <!-- --------------------- -->
     <Footer>
-        <h6 id="foooter">Bangladesh 2.0</h6>
+        <!-- <h6 id="foooter">Bangladesh 2.0</h6> -->
         
     </Footer>
     <!-- --------------------- -->
