--- a/index.html
+++ b/index.html
@@ -11,12 +11,10 @@
     <link rel="shortcut icon" href="assets/Group-3.png" type="image/x-icon">
 </head>
 <body class="fira-sans-regular">
-    <!-- --------------------- -->
     <nav>
             <h2 class="nav-title">Bangladesh 2.0</h2>
             <button class="primary-btn">Sign up</button>
     </nav>
-    <!-- --------------------- -->
     <header>
         <div class="hero">
             <div class="hero1">
@@ -33,7 +31,6 @@
             </div>
         </div>
     </header>
-    <!-- --------------------- -->
     <Main>
         <section class="pillers">
             <h1 class="section-title">Pillers of "Bangladesh 2.0"</h1>
@@ -41,22 +38,22 @@
                 <div class="piller-cards">
                     <div class="piller-img"><img src="assets/card-icon.png" alt="EH HEH HEH"></div>
                     <h5 class="body-title">Innovation</h5>
-                    <p class="body-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates, porro.</p>
+                    <p class="body-text">Innovation is the practical implementation of ideas that result in the introduction of new goods or services or improvement in offering goods or services.</p>
                 </div>
                 <div class="piller-cards">
                     <div class="piller-img"><img src="assets/card-icon.png" alt="EH HEH HEH"></div>
                     <h5 class="body-title">Sustainability</h5>
-                    <p class="body-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates, porro.</p>
+                    <p class="body-text">Sustainability means meeting our own needs without compromising the ability of future generations to meet their own needs.</p>
                 </div>
                 <div class="piller-cards">
                     <div class="piller-img"><img src="assets/card-icon.png" alt="EH HEH HEH"></div>
                     <h5 class="body-title">Education</h5>
-                    <p class="body-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates, porro.</p>
+                    <p class="body-text">The process of receiving or giving systematic instruction, especially at a school or university.</p>
                 </div>
                 <div class="piller-cards">
                     <div class="piller-img"><img src="assets/card-icon.png" alt="EH HEH HEH"></div>
                     <h5 class="body-title">Empowerment</h5>
-                    <p class="body-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates, porro.</p>
+                    <p class="body-text">The process of becoming stronger and more confident, especially in controlling one's life and claiming one's rights.</p>
                 </div>
             </div>
         </section>
@@ -100,7 +97,8 @@
                     <thead>
                         <tr>
                             <th colspan="4">Questions</th>
-                            <th>Select Your Opinion</th></tr>
+                            <th>Select Your Opinion</th>
+                        </tr>
                     </thead>
                     <tbody>
                         <tr>
@@ -141,8 +139,7 @@
                         <h3 class="body-title">Bangladesh Launches New Satellite</h3>
                         <img src="assets/al-jazeera.png" alt="al-jazeera" class="portalname"><br>
                         <span>Date: 05/01/2025 | Time: 10.25 PM</span>
-                        <p class="body-text neb">Not until the creation and maintenance of decent conditions of life for all people are recognized and accepted as a common obligation of all people and all countries—not until then shall we,
-                            with a certain degree of justification, be able to speak of humankind as civilized</p>
+                        <p class="body-text neb">Not until the creation and maintenance of decent conditions of life for all people are recognized and accepted as a common obligation of all people and all countries—not until then shall we, with a certain degree of justification, be able to speak of humankind as civilized</p>
                         <button  class="primary-btn"> <a href="https://en.wikipedia.org/wiki/Bangabandhu-1" target="_blank" rel="noopener noreferrer">Read More</a></button>
                     </div>
                 </div>
@@ -192,11 +189,14 @@
         </section>
         <!-- Newsletter End -->
     </Main>
-    <!-- --------------------- -->
     <Footer>
-        <!-- <h6 id="foooter">Bangladesh 2.0</h6> -->
-        
+        <h6 id="foooter">Bangladesh 2.0</h6>
+        <hr>
+        <div class="footer-image">
+            <a href="http://www.facebook.com" target="_blank"><img src="assets/facebook.png" alt="facebook logo"></a>
+            <a href="http://www.instagram.com" target="_blank"><img src="assets/instagram.png" alt="instagram logo"></a>
+            <a href="http://www.twitter.com" target="_blank"><img src="assets/x.png" alt=" X Logo"></a>
+        </div>
     </Footer>
-    <!-- --------------------- -->
 </body>
 </html>
